Condition functions should not match on empty cells.

Patch by Alfredo Beaumont - alfredo.beaumont at gmail dot com

BUG: 121772


svn path=/trunk/koffice/; revision=510130